[package]
name = "ttw_audio_patcher"
version = "0.1.0"
authors = ["Frodo45127 <frodo_gv@hotmail.com>"]
edition = "2021"

[dependencies]
walkdir = "^2"

[profile.dev]
incremental = true
opt-level = 3         #For performance debugging, check this. Makes compile times longer, but it gives way more accurate-with-release speeds.
